TP/y.output
   0  $accept : file $end

   1  $$1 :

   2  file : PROGRAM decls START $$1 main END
   3       | MODULE decls END

   4  decls :
   5        | gdecls

   6  gdecls : gdecls ';' decl
   7         | decl

   8  decl : qualif const vardecl

   9  $$2 :

  10  $$3 :

  11  decl : FUNCTION qualif ftype ID $$2 fvars $$3 eqbody

  12  $$4 :

  13  decl : FUNCTION qualif ftype ID $$4 eqbody
  14       | error

  15  fvar : NUMBER ID
  16       | STRING ID
  17       | ARRAY ID vdim

  18  fvars : fvar
  19        | fvars ';' fvar

  20  vardecl : NUMBER ID eqint
  21          | STRING ID eqstr
  22          | ARRAY ID vdim eqvec

  23  vdim : '[' INT ']'
  24       |

  25  qualif : PUBLIC
  26         | FORWARD
  27         |

  28  const : CONST
  29        |

  30  type : NUMBER
  31       | STRING
  32       | ARRAY

  33  ftype : type
  34        | VOID

  35  eqint :
  36        | EQ INT
  37        | EQ '-' INT

  38  eqstr :
  39        | EQ chars

  40  chars : char
  41        | chars char

  42  char : INT
  43       | CHAR
  44       | STR

  45  eqvec :
  46        | EQ ints

  47  ints : INT
  48       | '-' INT
  49       | ints ',' INT
  50       | ints ',' '-' INT

  51  eqbody : DONE
  52         | DO body

  53  main : fvars ';' instrs
  54       | instrs

  55  body : fvars ';' instrs ret
  56       | instrs ret

  57  ret : RETURN
  58      | RETURN expr
  59      |

  60  loop : ret
  61       | REPEAT
  62       | STOP

  63  block : instrs loop

  64  instrs :
  65         | instrs instr
  66         | instrs lbl

  67  lbl : ID ':'

  68  instr : IF expr THEN block elifs else FI

  69  $$5 :

  70  instr : FOR expr UNTIL expr STEP expr DO $$5 block DONE
  71        | expr '!'
  72        | expr ';'
  73        | lval '#' expr ';'
  74        | GOTO ID

  75  elifs :
  76        | elifs ELIF expr THEN block

  77  else :
  78       | ELSE block

  79  lval : ID
  80       | ID '[' expr ']'

  81  expr : chars
  82       | lval
  83       | '?'
  84       | '&' lval
  85       | '(' expr ')'
  86       | expr '+' expr
  87       | expr '-' expr
  88       | expr '*' expr
  89       | expr '/' expr
  90       | expr '%' expr
  91       | expr '^' expr
  92       | expr '=' expr
  93       | expr NE expr
  94       | expr GE expr
  95       | expr LE expr
  96       | expr '<' expr
  97       | expr '>' expr
  98       | expr '&' expr
  99       | expr '|' expr
 100       | expr TPAND expr
 101       | '~' expr
 102       | '-' expr
 103       | lval EQ expr
 104       | ID '(' exprs ')'

 105  exprs : expr
 106        | exprs ',' expr

state 0
	$accept : . file $end  (0)

	PROGRAM  shift 1
	MODULE  shift 2
	.  error

	file  goto 3


state 1
	file : PROGRAM . decls START $$1 main END  (2)
	decls : .  (4)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27
	START  reduce 4

	decls  goto 8
	gdecls  goto 9
	decl  goto 10
	qualif  goto 11


state 2
	file : MODULE . decls END  (3)
	decls : .  (4)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	END  reduce 4
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27

	decls  goto 12
	gdecls  goto 9
	decl  goto 10
	qualif  goto 11


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	decl : error .  (14)

	.  reduce 14


state 5
	qualif : PUBLIC .  (25)

	.  reduce 25


state 6
	qualif : FORWARD .  (26)

	.  reduce 26


state 7
	decl : FUNCTION . qualif ftype ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION . qualif ftype ID $$4 eqbody  (13)
	qualif : .  (27)

	PUBLIC  shift 5
	FORWARD  shift 6
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	VOID  reduce 27

	qualif  goto 13


state 8
	file : PROGRAM decls . START $$1 main END  (2)

	START  shift 14
	.  error


state 9
	decls : gdecls .  (5)
	gdecls : gdecls . ';' decl  (6)

	';'  shift 15
	END  reduce 5
	START  reduce 5


state 10
	gdecls : decl .  (7)

	.  reduce 7


state 11
	decl : qualif . const vardecl  (8)
	const : .  (29)

	CONST  shift 16
	STRING  reduce 29
	NUMBER  reduce 29
	ARRAY  reduce 29

	const  goto 17


state 12
	file : MODULE decls . END  (3)

	END  shift 18
	.  error


state 13
	decl : FUNCTION qualif . ftype ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif . ftype ID $$4 eqbody  (13)

	STRING  shift 19
	NUMBER  shift 20
	ARRAY  shift 21
	VOID  shift 22
	.  error

	type  goto 23
	ftype  goto 24


state 14
	file : PROGRAM decls START . $$1 main END  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 25


state 15
	gdecls : gdecls ';' . decl  (6)
	qualif : .  (27)

	error  shift 4
	PUBLIC  shift 5
	FORWARD  shift 6
	FUNCTION  shift 7
	STRING  reduce 27
	NUMBER  reduce 27
	ARRAY  reduce 27
	CONST  reduce 27

	decl  goto 26
	qualif  goto 11


state 16
	const : CONST .  (28)

	.  reduce 28


state 17
	decl : qualif const . vardecl  (8)

	STRING  shift 27
	NUMBER  shift 28
	ARRAY  shift 29
	.  error

	vardecl  goto 30


state 18
	file : MODULE decls END .  (3)

	.  reduce 3


state 19
	type : STRING .  (31)

	.  reduce 31


state 20
	type : NUMBER .  (30)

	.  reduce 30


state 21
	type : ARRAY .  (32)

	.  reduce 32


state 22
	ftype : VOID .  (34)

	.  reduce 34


state 23
	ftype : type .  (33)

	.  reduce 33


state 24
	decl : FUNCTION qualif ftype . ID $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif ftype . ID $$4 eqbody  (13)

	ID  shift 31
	.  error


state 25
	file : PROGRAM decls START $$1 . main END  (2)
	instrs : .  (64)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	INT  reduce 64
	CHAR  reduce 64
	ID  reduce 64
	STR  reduce 64
	END  reduce 64
	IF  reduce 64
	FOR  reduce 64
	GOTO  reduce 64
	'&'  reduce 64
	'~'  reduce 64
	'-'  reduce 64
	'?'  reduce 64
	'('  reduce 64

	fvar  goto 35
	fvars  goto 36
	instrs  goto 37
	main  goto 38


state 26
	gdecls : gdecls ';' decl .  (6)

	.  reduce 6


state 27
	vardecl : STRING . ID eqstr  (21)

	ID  shift 39
	.  error


state 28
	vardecl : NUMBER . ID eqint  (20)

	ID  shift 40
	.  error


state 29
	vardecl : ARRAY . ID vdim eqvec  (22)

	ID  shift 41
	.  error


state 30
	decl : qualif const vardecl .  (8)

	.  reduce 8


state 31
	decl : FUNCTION qualif ftype ID . $$2 fvars $$3 eqbody  (11)
	decl : FUNCTION qualif ftype ID . $$4 eqbody  (13)
	$$2 : .  (9)
	$$4 : .  (12)

	STRING  reduce 9
	NUMBER  reduce 9
	ARRAY  reduce 9
	DO  reduce 12
	DONE  reduce 12

	$$2  goto 42
	$$4  goto 43


state 32
	fvar : STRING . ID  (16)

	ID  shift 44
	.  error


state 33
	fvar : NUMBER . ID  (15)

	ID  shift 45
	.  error


state 34
	fvar : ARRAY . ID vdim  (17)

	ID  shift 46
	.  error


state 35
	fvars : fvar .  (18)

	.  reduce 18


state 36
	fvars : fvars . ';' fvar  (19)
	main : fvars . ';' instrs  (53)

	';'  shift 47
	.  error


state 37
	main : instrs .  (54)
	instrs : instrs . instr  (65)
	instrs : instrs . lbl  (66)

	INT  shift 48
	CHAR  shift 49
	ID  shift 50
	STR  shift 51
	IF  shift 52
	FOR  shift 53
	GOTO  shift 54
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	END  reduce 54

	lval  goto 60
	chars  goto 61
	char  goto 62
	instr  goto 63
	expr  goto 64
	lbl  goto 65


state 38
	file : PROGRAM decls START $$1 main . END  (2)

	END  shift 66
	.  error


state 39
	vardecl : STRING ID . eqstr  (21)
	eqstr : .  (38)

	EQ  shift 67
	END  reduce 38
	START  reduce 38
	';'  reduce 38

	eqstr  goto 68


state 40
	vardecl : NUMBER ID . eqint  (20)
	eqint : .  (35)

	EQ  shift 69
	END  reduce 35
	START  reduce 35
	';'  reduce 35

	eqint  goto 70


state 41
	vardecl : ARRAY ID . vdim eqvec  (22)
	vdim : .  (24)

	'['  shift 71
	END  reduce 24
	START  reduce 24
	EQ  reduce 24
	';'  reduce 24

	vdim  goto 72


state 42
	decl : FUNCTION qualif ftype ID $$2 . fvars $$3 eqbody  (11)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	.  error

	fvar  goto 35
	fvars  goto 73


state 43
	decl : FUNCTION qualif ftype ID $$4 . eqbody  (13)

	DO  shift 74
	DONE  shift 75
	.  error

	eqbody  goto 76


state 44
	fvar : STRING ID .  (16)

	.  reduce 16


state 45
	fvar : NUMBER ID .  (15)

	.  reduce 15


state 46
	fvar : ARRAY ID . vdim  (17)
	vdim : .  (24)

	'['  shift 71
	DO  reduce 24
	DONE  reduce 24
	';'  reduce 24

	vdim  goto 77


state 47
	fvars : fvars ';' . fvar  (19)
	main : fvars ';' . instrs  (53)
	instrs : .  (64)

	STRING  shift 32
	NUMBER  shift 33
	ARRAY  shift 34
	INT  reduce 64
	CHAR  reduce 64
	ID  reduce 64
	STR  reduce 64
	END  reduce 64
	IF  reduce 64
	FOR  reduce 64
	GOTO  reduce 64
	'&'  reduce 64
	'~'  reduce 64
	'-'  reduce 64
	'?'  reduce 64
	'('  reduce 64

	fvar  goto 78
	instrs  goto 79


state 48
	char : INT .  (42)

	.  reduce 42


state 49
	char : CHAR .  (43)

	.  reduce 43


state 50
	lbl : ID . ':'  (67)
	lval : ID .  (79)
	lval : ID . '[' expr ']'  (80)
	expr : ID . '(' exprs ')'  (104)

	'['  shift 80
	':'  shift 81
	'('  shift 82
	TPAND  reduce 79
	EQ  reduce 79
	'|'  reduce 79
	'&'  reduce 79
	'='  reduce 79
	NE  reduce 79
	'<'  reduce 79
	'>'  reduce 79
	GE  reduce 79
	LE  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	'^'  reduce 79
	';'  reduce 79
	'!'  reduce 79
	'#'  reduce 79


state 51
	char : STR .  (44)

	.  reduce 44


state 52
	instr : IF . expr THEN block elifs else FI  (68)

	INT  shift 48
	CHAR  shift 49
	ID  shift 83
	STR  shift 51
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	.  error

	lval  goto 84
	chars  goto 61
	char  goto 62
	expr  goto 85


state 53
	instr : FOR . expr UNTIL expr STEP expr DO $$5 block DONE  (70)

	INT  shift 48
	CHAR  shift 49
	ID  shift 83
	STR  shift 51
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	.  error

	lval  goto 84
	chars  goto 61
	char  goto 62
	expr  goto 86


state 54
	instr : GOTO . ID  (74)

	ID  shift 87
	.  error


state 55
	expr : '&' . lval  (84)

	ID  shift 88
	.  error

	lval  goto 89


state 56
	expr : '~' . expr  (101)

	INT  shift 48
	CHAR  shift 49
	ID  shift 83
	STR  shift 51
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	.  error

	lval  goto 84
	chars  goto 61
	char  goto 62
	expr  goto 90


state 57
	expr : '-' . expr  (102)

	INT  shift 48
	CHAR  shift 49
	ID  shift 83
	STR  shift 51
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	.  error

	lval  goto 84
	chars  goto 61
	char  goto 62
	expr  goto 91


state 58
	expr : '?' .  (83)

	.  reduce 83


state 59
	expr : '(' . expr ')'  (85)

	INT  shift 48
	CHAR  shift 49
	ID  shift 83
	STR  shift 51
	'&'  shift 55
	'~'  shift 56
	'-'  shift 57
	'?'  shift 58
	'('  shift 59
	.  error

	lval  goto 84
	chars  goto 61
	char  goto 62
	expr  goto 92


state 60
	instr : lval . '#' expr ';'  (73)
	expr : lval .  (82)
	expr : lval . EQ expr  (103)

	EQ  shift 93
	'#'  shift 94
	TPAND  reduce 82
	'|'  reduce 82
	'&'  reduce 82
	'='  reduce 82
	NE  reduce 82
	'<'  reduce 82
	'>'  reduce 82
	GE  reduce 82
	LE  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	'^'  reduce 82
	';'  reduce 82
	'!'  reduce 82


state 61
	chars : chars . char  (41)
	expr : chars .  (81)

	INT  shift 48
	CHAR  shift 49
	STR  shift 51
	END  reduce 81
	THEN  reduce 81
	FI  reduce 81
	ELIF  reduce 81
	ELSE  reduce 81
	START  reduce 81
	UNTIL  reduce 81
	STEP  reduce 81
	DO  reduce 81
	DONE  reduce 81
	TPAND  reduce 81
	'|'  reduce 81
	'&'  reduce 81
	'='  reduce 81
	NE  reduce 81
	'<'  reduce 81
	'>'  reduce 81
	GE  reduce 81
	LE  reduce 81
	'+'  reduce 81
	'-'  reduce 81
	'*'  reduce 81
	'/'  reduce 81
	'%'  reduce 81
	'^'  reduce 81
	';'  reduce 81
	']'  reduce 81
	','  reduce 81
	'!'  reduce 81
	')'  reduce 81

	char  goto 95


state 62
	chars : char .  (40)

	.  reduce 40


state 63
	instrs : instrs instr .  (65)

	.  reduce 65

